# fish-shell

./: .taplo.toml  BSDmakefile  CONTRIBUTING.rst  Cargo.toml  GNUmakefile  README.rst  build.rs  deny.toml  pyproject.toml
.github/actions/rust-toolchain@oldest-supported/: action.yml
.github/actions/rust-toolchain@stable/: action.yml
.github/workflows/: lint.yml  main.yml  shellcheck.yml  test.yml
build_tools/: check.sh  fish_xgettext.fish  lsan_suppressions.txt  sanitize.sh  set_asan_vars.sh  style.fish  update_translations.fish
cmake/: Docs.cmake
crates/build-helper/: Cargo.toml
crates/build-helper/src/: lib.rs
crates/build-man-pages/: Cargo.toml
crates/color/: Cargo.toml
crates/color/src/: lib.rs
crates/common/: Cargo.toml
crates/fallback/: Cargo.toml
crates/fluent/src/: lib.rs
crates/gettext/: Cargo.toml
crates/gettext-extraction/: Cargo.toml
crates/gettext-extraction/src/: lib.rs
crates/gettext-maps/: Cargo.toml  build.rs
crates/gettext-mo-file-parser/: Cargo.toml
crates/gettext-po-file-parser/: Cargo.toml
crates/gettext-po-file-parser/src/: lib.rs
crates/po-file-parser/: Cargo.toml
crates/printf/: Cargo.toml
crates/printf/src/: tests.rs
crates/tempfile/: Cargo.toml
crates/util/: Cargo.toml
crates/wcstringutil/: Cargo.toml
crates/wgetopt/: Cargo.toml
crates/widecharwidth/: Cargo.toml
crates/widestring/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: fluent.rs  format.rs  gettext.rs  lib.rs  main.rs
localization/po/: de.po  en.po  es.po  fr.po  ja_JP.po  pl.po  pt_BR.po  sv.po  zh_CN.po  zh_TW.po
po/: de.po  en.po  fr.po  pl.po  pt_BR.po  sv.po  zh_CN.po
src/: color.rs  common.rs
src/builtins/: argparse.rs
src/highlight/: highlight.rs
src/localization/: fluent.rs  mod.rs  settings.rs
src/tests/: abbrs.rs
src/wutil/: gettext.rs  mod.rs
tests/: littlecheck.py  test_driver.py
tests/checks/: gettext.fish  message-localization.fish
