[package]
edition.workspace = true
license.workspace = true
name = "fish-common"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

[dependencies]
bitflags.workspace = true
fish-widestring.workspace = true
libc.workspace = true
nix.workspace = true

[lints]
workspace = true
