[package]
edition.workspace = true
license.workspace = true
name = "fish-fallback"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

[dependencies]
fish-common.workspace = true
fish-widecharwidth.workspace = true
fish-widestring.workspace = true
libc.workspace = true
widestring.workspace = true

[build-dependencies]
fish-build-helper.workspace = true
rsconf.workspace = true

[lints]
workspace = true
