[package]
description = "proc-macro for extracting strings for gettext translation"
edition.workspace = true
license.workspace = true
name = "fish-gettext-extraction"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

[lib]
proc-macro = true

[dependencies]
fish-tempfile.workspace = true
proc-macro2.workspace = true

[build-dependencies]
rsconf.workspace = true

[lints]
workspace = true
