[package]
edition.workspace = true
license.workspace = true
name = "fish-gettext-maps"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

[dependencies]
phf.workspace = true

[build-dependencies]
fish-build-helper.workspace = true
fish-gettext-mo-file-parser.workspace = true
phf_codegen.workspace = true
rsconf.workspace = true

[lints]
workspace = true
