[package]
description = "printf implementation, based on musl"
edition.workspace = true
license = "MIT"
name = "fish-printf"
repository.workspace = true
rust-version.workspace = true
version = "0.2.1"

[dependencies]
libc.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
widestring = { workspace = true, optional = true }

[lints]
workspace = true
